# python-rest-tester

./: CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  THIRD-PARTY-NOTICES.txt  pyproject.toml
deployment/: dev-docker-compose.yml  local.Dockerfile  prod-docker-compose.yml
rest_tester/: apitester.py  conftest.py  logger.py  main.py  options.py
rest_tester/configs/: configs.py  constants.py  logger_config.py
rest_tester/modules/: auth_module.py  request_module.py
rest_tester/report/: sample_report_2024-02-23-05:06:25.html
rest_tester/report/assets/: custom.css
rest_tester/tests/: payloads.py  responses.py
rest_tester/tests/public_api/group1/: tests.json
rest_tester/tests/public_api/group2/: tests.json
rest_tester/utils/: openapi_parser.py  postman_parser.py  utils.py
