[tool.poetry]
name = "python-api-testing-framework"
version = "0.1.0"
description = "1.The api-testing project for any REST based application."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.20.0"
pytest = "^7.4.3"
pydantic = "^2.5.2"
black = "^24.3.0"
pytest-html = "^4.1.1"
datamodel-code-generator = "^0.25.2"
requests = "^2.31.0"
postmanparser = { git = "https://github.com/appknox/postmanparser.git", rev = "aa1bbf5eab2b6da79489af0e4982a0ae76dc6fec" }
jsf = "^0.11.2"
h11 = "0.16.0"
jinja2 = "3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
